add task handlers
