# internal/httpcontroller/v1/links.go
@@ -8,10 +8,10 @@ import (
 	"archiveFiles/pkg/logger"
 	"bytes"
 	"encoding/json"
+	"fmt"
 	"io"
 	"net/http"
 	"strings"
-	"time"
 
 	"go.uber.org/zap"
 )
@@ -43,9 +43,12 @@ func (v *V1) SetOfLinks(w http.ResponseWriter, r *http.Request) {
 	zipWriter := zip.NewWriter(buf)
 	defer zipWriter.Close()
 
+	taskLinks := convertLinks(links.Links)
+
 	// обработать ссылки
-	errorMess, err := v.usecase.ProcessLinks(zipWriter, links.Links, l)
+	errorMess, _, err := v.Usecase.ProcessLinks(zipWriter, taskLinks, l)
 	if err != nil {
+		l.Debug(fmt.Sprintf("IsLinkLimitError: %v", builderror.IsLinkLimitError(err)))
 		if builderror.IsLinkLimitError(err) {
 			http.Error(w, err.Error(), http.StatusBadRequest)
 		} else {
@@ -84,20 +87,95 @@ func (v *V1) CreateTask(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	l := logger.FromContext(r.Context())
 
-	task, err := v.usecase.CreateTask(l)
+	task, err := v.Usecase.CreateTask(l)
 	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
+		l.Debug(fmt.Sprintf("IsActiveTasksError: %v", builderror.IsActiveTasksLimitError(err)))
+		code := http.StatusInternalServerError
+
+		if builderror.IsActiveTasksLimitError(err) {
+			code = http.StatusBadRequest
+		}
+
+		mess := err.Error()
+		respErr := &api.ErrorResponse{
+			Code:  &code,
+			Error: &mess,
+		}
+		w.WriteHeader(code)
+		json.NewEncoder(w).Encode(respErr)
 		return
 	}
 
-	now := time.Now()
-	apiTask := &api.Task{
-		Id:      &task.ID,
-		Created: &now,
+	apiTask := convertTask(task)
+	w.WriteHeader(http.StatusCreated)
+	json.NewEncoder(w).Encode(apiTask)
+}
+
+func (v *V1) AppendLink(w http.ResponseWriter, r *http.Request, taskID int) {
+	w.Header().Set("Content-Type", "application/json")
+	l := logger.FromContext(r.Context())
+
+	link := &api.AppendLinkJSONRequestBody{}
+	err := json.NewDecoder(r.Body).Decode(link)
+	if err != nil {
+		l.Error("Failed decode request body")
+		http.Error(w, "Invalid JSON format", http.StatusBadRequest)
+		return
+	}
+	if link.Link == nil {
+		http.Error(w, "Link must be present", http.StatusBadRequest)
+		return
 	}
 
+	//
+	task, err := v.Usecase.AppendLink(taskID, *link.Link, l)
+
+	if err != nil {
+		code := http.StatusInternalServerError
+
+		if builderror.IsNotFoundError(err) {
+			code = http.StatusNotFound
+		}
+
+		mess := err.Error()
+		respErr := &api.ErrorResponse{
+			Code:  &code,
+			Error: &mess,
+		}
+		w.WriteHeader(code)
+		json.NewEncoder(w).Encode(respErr)
+		return
+	}
+
+	apiTask := convertTask(task)
+	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(apiTask)
+}
 
-	w.WriteHeader(http.StatusCreated)
+func (v *V1) GetArchive(w http.ResponseWriter, r *http.Request, taskID int) {
+	l := logger.FromContext(r.Context())
+	content, err := v.Usecase.GetArchive(taskID, l)
+	if err != nil {
+		code := http.StatusInternalServerError
+		if builderror.IsNotFoundError(err) {
+			code = http.StatusNotFound
+		}
 
+		mess := err.Error()
+		respErr := &api.ErrorResponse{
+			Code:  &code,
+			Error: &mess,
+		}
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(code)
+		json.NewEncoder(w).Encode(respErr)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/zip")
+	w.Header().Set("Content-Disposition", "attachment; filename=archive.zip")
+	w.Header().Set("Cache-Control", "no-store")
+
+	w.WriteHeader(http.StatusOK)
+	w.Write(content)
 }
